--- a/src/style/all.scss
+++ b/src/style/all.scss
@@ -1,8 +1,9 @@
 @import "bootstrap/scss/functions";
 @import "./variables";
 @import "bootstrap/scss/bootstrap";
-@import "../style/home/home.css";
 @import "../style/component/layout.css";
+@import "../style/home/home.css";
+@import "../style/evnIntro/evnIntro.css";
 @import "../style/component/component.css";
 @import "../style/login/login.css";
 
