--- a/src/style/component/layout.sass
+++ b/src/style/component/layout.sass
@@ -7,6 +7,9 @@
 // font-family: 'Noto Sans', sans-serif
 // font-family: 'Noto Sans TC', sans-serif
 
+#root
+    background-color: $mainColor-green
+
 //toTop 置頂button
 #toTop   
     position: fixed
@@ -33,6 +36,11 @@
 //頁首header
 .navBarBg
     background-color: #FEFCFC
+.navBarBox
+    background-color: #FEFCFC
+    position: relative
+    z-index: 99
+    padding-bottom: 65px
 .headerWrap
     padding-top: 94px
     padding-bottom: 80px
@@ -202,8 +210,15 @@
     animation-delay: 0.7s
 
 //頁尾footer
+
+.wrapBox
+    width: 100%
+    background-color: $mainColor-white
+    border-radius: 0 0 205px 205px
+    min-height: 672px
+    overflow: hidden
 footer
-    margin-top: 125px
+    margin-top: 90px
     min-height: 210px
     .footerRow
         align-items: center
