--- a/src/style/home/home.sass
+++ b/src/style/home/home.sass
@@ -488,7 +488,7 @@ html,body
 
 @media (max-width:768px)
     .indexBox
-        border-radius: 0 0 136px 136px
+        // border-radius: 0 0 136px 136px
 
     .rwd_linkBtn
         width: 100%
