--- a/src/style/component/layout.sass
+++ b/src/style/component/layout.sass
@@ -36,13 +36,14 @@
 //頁首header
 .navBarBg
     background-color: #FEFCFC
+    padding-bottom: 90px
 .navBarBox
     background-color: #FEFCFC
     position: relative
     z-index: 99
-    padding-bottom: 65px
+ 
 .headerWrap
-    padding-top: 94px
+    // padding-top: 94px
     padding-bottom: 80px
     position: relative
     .container
