--- a/src/style/home/home.sass
+++ b/src/style/home/home.sass
@@ -12,6 +12,9 @@ html,body
     margin: 0
     padding: 0
 
+.container
+    max-width: 1640px
+
 #root
     overflow-x: hidden   
 
@@ -368,7 +371,8 @@ html,body
         img
             margin-left: 10px
             position: relative
-            bottom: 2px 
+            bottom: 2px
+            width: 18px 
 
 //Contact Us
 .contactUs
