--- a/src/style/component/layout.sass
+++ b/src/style/component/layout.sass
@@ -228,6 +228,9 @@ footer
         display: flex
         justify-content: flex-start
         align-items: center
+        img:nth-of-type(1)
+            width: 316px
+            
     .socialList
         display: flex
         justify-content: space-evenly
