--- a/src/style/evnIntro/evnIntro.sass
+++ b/src/style/evnIntro/evnIntro.sass
@@ -1,3 +1,254 @@
 @import "../common/mixins"
 @import "../common/variables"
 
+// 字型
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&family=Noto+Sans:wght@100;200;300;400;500;600;700;800&display=swap')
+
+@mixin titleBox($subColor:$subColor-lightBlue,$titleColor:$mainColor-green)
+    letter-spacing: 1px
+    .subTitle
+        +fz-TC(26px,$subColor-lightBlue,700)
+        color: $subColor
+    .mainTitle
+        +fz-TC(50px,$mainColor-green,700)
+        color: $titleColor
+
+@mixin textContect($lineHeight:38px)
+    +fz-TC(18px,#4D5051,400)
+    line-height: $lineHeight
+
+.evnIntro
+
+//循環杯是什麼
+.evnIntroBox
+    margin-top: 80px
+    .evnIntro
+        &-row
+            align-items: center
+        &_l-left
+            margin-left: 43px
+            position: relative
+            top: -17px
+            .textBox
+                +titleBox
+                
+                .subTitle
+                .mainTitle
+            .contentText
+                +textContect
+                margin-top: 35px
+                padding-right: 40px
+        &_l-right
+            position: relative
+            text-align: center   
+            .decoPot
+                position: absolute
+                &1
+                    width: 48px
+                    left: 48px
+                    top: 36px
+                &2
+                    width: 22px
+                    right: 48px
+                    top: 36px
+                &3
+                    width: 32px
+                    right: 29px
+                    top: 315px
+                &4
+                    width: 26px
+                    right: 47px
+                    top: 370px
+
+        &_imgBox
+            position: relative
+            display: inline-block
+            
+            .img-evnIntro
+                width: 513px
+            .img-evnCupIll
+                width: 134px
+                position: absolute
+                left: 182px
+                top: 169px
+//為什麽需要循環杯
+.needBox
+    margin-top: 100px
+    &_bg
+        background-color: $mainColor-green
+        height: 637px
+        overflow: hidden
+        position: relative
+        .decoBg1
+            width: 482px
+            position: absolute
+            bottom: -14px
+            left: 0px
+        .decoBg2
+            width: 600px
+            position: absolute
+            right: 0
+            bottom: -39px
+              
+    .textBox
+        +titleBox($mainColor-white,$mainColor-white)
+        text-align: center
+        margin-top: 90px
+        .subTitle
+        .mainTitle
+            margin-top: 15px
+    &_introWrap
+        margin-top: -350px
+        z-index: 5
+        position: relative
+        text-align: center
+        
+        .whitePot
+            &1
+                width: 84px
+                left: 150px
+                top: 14px
+            &2
+                width: 92px
+                right: 130px
+                top: -49px
+
+
+            &3
+                width: 26px
+                right: 122px
+                top: 279px
+            &1,&2,&3
+                position: absolute
+    &_content
+        background: #FFFFFF
+        box-shadow: 6px 12px 16px rgba(102, 143, 102, 0.12)
+        border-radius: 34px
+        max-width: 768px
+        display: inline-block
+        padding: 34px 83px
+        overflow: hidden
+        position: relative
+       
+        &_textDeco
+            width: 250px
+            position: absolute
+            z-index: 2
+            right: -4px
+            top: -38px
+    &_textBox
+        +textContect
+        z-index: 5
+        position: relative
+        &:nth-of-type(1)
+            margin-bottom: 45px
+        &:nth-of-type(2)
+            margin-bottom: 15px
+        &_title
+            +fz-TC(18px,$mainColor-green)
+            letter-spacing: 1px
+            margin-bottom: 15px 
+        &_text
+            text-align: left 
+//如何開始
+.startBox
+    margin-top: 150px
+    .textBox
+        +titleBox($subColor-lightBlue,$mainColor-blue)    
+        margin-left: 43px
+//經濟效益
+.benefitsBox
+    margin-top: 120px
+    &_bg
+        height: 603px
+        background-color: $subColor-lightBlue
+        overflow: hidden
+        position: relative
+        &-deco
+            width: 400px
+            position: absolute
+            top: -1px
+            left: -14px
+    .textBox
+        +titleBox($mainColor-white,$mainColor-white)
+        text-align: center
+        margin-top: 90px
+        .subTitle
+        .mainTitle
+            margin-top: 15px
+
+    .benefits
+        &_list
+            margin: 0 40px
+            margin-top: -290px
+        &_item
+            background: $mainColor-white
+            box-shadow: 0px 8px 7px rgba(0, 0, 0, 0.08)
+            border-radius: 34px
+            padding: 6px
+            margin: 0 25px
+            position: relative
+            &_bg               
+                height: 202px
+                border-radius: 30px 30px 0px 0px
+                width: 100%
+                background-size: cover
+                background-repeat: no-repeat
+            .bgImg1
+                background-image: url('../../img/evnIntro/img-benefits1.svg')
+            .bgImg2
+                background-image: url('../../img/evnIntro/img-benefits2.svg')
+            .bgImg3
+                background-image: url('../../img/evnIntro/img-benefits3.svg')
+            
+            &_content
+                padding: 25px 30px 60px 30px 
+            &_title
+                +fz-TC
+                letter-spacing: 1px
+                margin-bottom: 15px
+            &_text
+                +textContect
+
+    .ico-benefits
+        width: 32px
+        position: absolute
+        right: 24px
+        bottom: 18px
+//政策支持
+.policyBox
+    margin-top: 260px
+    margin-bottom: 240px
+    .textBox
+        +titleBox
+.policy
+    &-row
+        align-items: end
+    &_textWrap
+        margin-left: 43px
+        margin-right: 43px
+    &_Intro
+        +textContect
+        margin-top: 50px
+    &_list
+        display: flex
+        justify-content: space-evenly
+    &_item
+        background: #EFEDED
+        border-radius: 29px
+        width: 162px
+        height: 171px
+        display: flex
+        align-items: center
+        justify-content: center
+        &:nth-of-type(1) img
+            width: 105px
+        &:nth-of-type(2) img
+            width: 113px
+        &:nth-of-type(3) img
+            width: 118px
+        &:nth-of-type(4) img
+            width: 102px
+
+               
+        
