--- a/src/style/home/home.sass
+++ b/src/style/home/home.sass
@@ -232,14 +232,9 @@ html,body
         i
             left: 20px
             transition: all 0.3s ease-in-out
-.testImg
-    width: 100%
-    height: 607px   
-    background-color: #E9F8FF
-    border-radius: 110px
-    // position: relative
-    // top: -24%
-    text-align: center
+.imgPhone
+    img 
+        width: 698px
 
 //News
 .news
