--- a/src/component/articleComponents/Home/RoutePage/style.css
+++ b/src/component/articleComponents/Home/RoutePage/style.css
@@ -9,6 +9,25 @@
 }
 
 
+.align-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  padding: 10px;
+  margin-bottom: 20rem;
+}
+
+
+.d-flex{
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  margin-left: -20px;
+}
+
+
 body {
     margin:  0;
     padding: 0;
@@ -17,8 +36,6 @@ body {
     font-weight: 600;
     color: var(--mainColor-blue);
   }
-
-
   
 .tab{
   /* border: 1px solid var(--mainColor-blue); */
@@ -28,6 +45,7 @@ body {
 
 .tab ul{
   list-style-type: none;
+  padding: auto;
 }
 
 .tab ul li{
@@ -41,6 +59,8 @@ body {
   color: white;
   cursor: pointer;
   background-color: var(--mainColor-green);
+  transition: all 0.3s;
+
 }
 
 .content{
@@ -50,4 +70,34 @@ body {
 
 .show-content{
   display: block;
+}
+
+.flex-fill{
+  height: 100%;
+  font-family: 'Noto Sans TC', sans-serif;
+  font-weight: 600;
+  color: var(--mainColor-blue);
+}
+
+.active-tab {
+  background-color: #64C676;
+}
+
+.flex-fill{
+  -webkit-box-shadow: 1px 10px 30px -10px #66bb6a;
+  -moz-box-shadow: 1px 10px 30px -10px #66bb6a;
+  box-shadow: 1px 10px 30px -10px #66bb6a;
+  margin: 0 1rem;
+}
+
+.flex-fill.active{
+  background-color: #64C676;
+  color: #FEFCFC;
+  -webkit-box-shadow: 1px 10px 30px -10px #66bb6a;
+  -moz-box-shadow: 1px 10px 30px -10px #66bb6a;
+  box-shadow: 1px 10px 30px -8px #66bb6a;
+}
+
+.routerpage{
+  margin-bottom: 5rem;
 }
