--- a/src/style/evnIntro/evnIntro.css
+++ b/src/style/evnIntro/evnIntro.css
@@ -1,4 +1,38 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&family=Noto+Sans:wght@100;200;300;400;500;600;700;800&display=swap");
+.scrollWrap {
+  display: inline-block;
+  position: absolute;
+  left: 3%;
+  top: 600px;
+}
+.scrollWrap .scrollBox {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.scrollWrap .scrollBox .scroll-text {
+  font-size: 24px;
+  font-family: "Noto Sans TC", sans-serif;
+  color: #50A960;
+  font-weight: 700;
+  writing-mode: vertical-rl;
+}
+.scrollWrap .scrollBox .scrollBar {
+  width: 4px;
+  height: 110px;
+  background-color: #D3FFDB;
+  transform: translateX(-50%);
+  margin-top: 10px;
+  overflow: hidden;
+}
+.scrollWrap .scrollBox .scrollBar .percent {
+  display: block;
+  width: 100%;
+  height: 0%;
+  background-color: #50A960;
+}
+
 .evnIntroBox {
   margin-top: 80px;
 }
@@ -42,6 +76,7 @@
 }
 .evnIntroBox .evnIntro_l-right .decoPot {
   position: absolute;
+  animation-delay: 1.5s;
 }
 .evnIntroBox .evnIntro_l-right .decoPot1 {
   width: 48px;
@@ -75,8 +110,47 @@
   position: absolute;
   left: 182px;
   top: 169px;
+  animation: evnCupIll-rotate 1s linear reverse both;
+  animation-delay: 1s;
+  animation-iteration-count: 1;
+  cursor: pointer;
+}
+.evnIntroBox .evnIntro_imgBox .evnCupIllWrap:hover {
+  transform-origin: top center;
+  animation-delay: 0s;
+  animation-name: swingEvn;
+  animation-play-state: running;
+  animation-duration: 1s;
 }
 
+@keyframes evnCupIll-rotate {
+  0% {
+    transform: scale(1) rotateZ(0);
+  }
+  50% {
+    transform: scale(0.5) rotateZ(180deg);
+  }
+  100% {
+    transform: scale(0) rotateZ(360deg);
+  }
+}
+@keyframes swingEvn {
+  20% {
+    transform: rotate(15deg);
+  }
+  40% {
+    transform: rotate(-10deg);
+  }
+  60% {
+    transform: rotate(5deg);
+  }
+  80% {
+    transform: rotate(-5deg);
+  }
+  to {
+    transform: rotate(0deg);
+  }
+}
 .needBox {
   margin-top: 150px;
 }
@@ -143,6 +217,7 @@
 }
 .needBox_introWrap .whitePot1, .needBox_introWrap .whitePot2, .needBox_introWrap .whitePot3 {
   position: absolute;
+  animation-delay: 1.2s;
 }
 .needBox_content {
   background: #FFFFFF;
