--- a/src/style/evnIntro/evnIntro.sass
+++ b/src/style/evnIntro/evnIntro.sass
@@ -18,6 +18,35 @@
     line-height: $lineHeight
 
 .evnIntro
+//scroll滾輪
+.scrollWrap
+    display: inline-block
+    position: absolute
+    left: 3%
+    top: 600px
+    .scrollBox
+        display: flex
+        flex-direction: column
+        justify-content: center
+        align-items: center
+        .scroll-text
+            +fz-TC(24px,#50A960)
+            writing-mode: vertical-rl
+        .scrollBar
+            width: 4px
+            height: 110px
+            background-color: #D3FFDB
+            transform: translateX(-50%)
+            margin-top: 10px
+            overflow: hidden
+            .percent
+                display: block
+                width: 100%
+                height: 0% 
+                background-color: #50A960 
+@media (max-width:576px)
+    .scrollWrap
+        display: none    
 
 //循環杯是什麼
 .evnIntroBox
@@ -43,6 +72,8 @@
             text-align: center   
             .decoPot
                 position: absolute
+                animation-delay: 1.5s    
+               
                 &1
                     width: 48px
                     left: 48px
@@ -71,6 +102,38 @@
                 position: absolute
                 left: 182px
                 top: 169px
+                animation: evnCupIll-rotate 1s linear reverse both
+                animation-delay: 1s
+                animation-iteration-count: 1
+                cursor: pointer
+            .evnCupIllWrap
+                &:hover
+                    transform-origin: top center
+                    animation-delay: 0s
+                    animation-name: swingEvn
+                    animation-play-state: running
+                    animation-duration: 1s
+//小循杯動畫
+@keyframes evnCupIll-rotate
+    0%
+        transform: scale(1) rotateZ(0)
+    50%
+        transform: scale(0.5) rotateZ(180deg)
+    100%
+        transform: scale(0) rotateZ(360deg)
+//小循杯hover
+@keyframes swingEvn 
+    20% 
+        transform: rotate(15deg)
+    40% 
+        transform: rotate(-10deg)
+    60% 
+        transform: rotate(5deg)
+    80% 
+        transform: rotate(-5deg)
+    to 
+        transform: rotate(0deg)
+
 //為什麽需要循環杯
 .needBox
     margin-top: 150px
@@ -120,6 +183,7 @@
                 top: 279px
             &1,&2,&3
                 position: absolute
+                animation-delay: 1.2s
     &_content
         background: #FFFFFF
         box-shadow: 6px 12px 16px rgba(102, 143, 102, 0.12)
