--- a/src/style/home/home.sass
+++ b/src/style/home/home.sass
@@ -386,7 +386,7 @@ html,body
     //內容
     &_Box
         margin-top: 140px
-        padding: 0 109px
+        // padding: 0 109px
         display: flex
         justify-content: space-between
         align-items: center
