--- a/src/component/aboutme-components/communicate/communicate.css
+++ b/src/component/aboutme-components/communicate/communicate.css
@@ -1,12 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
-:root{
-  --mainColor-white: #FEFCFC;
-  --mainColor-blue: #162F3A;
-  --subColor-blue: #2D5363;
-  --subColor-lightBlue: #9BC9DD;
-  --mainColor-green: #64C676;
-}
 
 
 img {
@@ -253,7 +246,13 @@ section {
     display: block;
   }
 
+  .communicate-img img {
+    margin: 0;
+  }
   /*End Hire*/
   /*End Home Page*/
 }
 
+.rwd_linkBtn{
+  background: var(--mainColor-white);
+}
