--- a/src/component/fordummies/farm-invest/farm.css
+++ b/src/component/fordummies/farm-invest/farm.css
@@ -7,14 +7,6 @@
   box-sizing: border-box;
 }
 
-:root{
-  --mainColor-white: #FEFCFC;
-  --mainColor-blue: #162F3A;
-  --subColor-blue: #2D5363;
-  --subColor-lightBlue: #9BC9DD;
-  --mainColor-green: #64C676;
-}
-
 html {
   font-size: 10px;
 }
@@ -22,18 +14,11 @@ html {
 body {
   font-family: 'Noto Sans TC', sans-serif;
   font-size: 1.6rem;
-  color: var(--mainColor-blue);
   background-color: var(--mainColor-white);
 }
 
 ul {
   list-style: none;
-}
-
-a {
-  text-decoration: none;
-  cursor: pointer;
-  color: var(--mainColor-blue);
 }
 
 img {
@@ -60,59 +45,20 @@ section {
   max-width: 105rem;
 }
 
-.btn {
+a.farm-btn {
   border-radius: 0.5rem;
   padding: 1.2rem;
+  color: #FEFCFC; 
+  font-weight: 600;
 }
 
-
-.btn__signup {
-  border: 1px solid #ffffff;
-  font-size: 1.6rem;
-  color: #ffffff;
-  /*
-  Button hover effect resource
-  https://codepen.io/alticreation/pen/zBZwOP
-  */
-  display: inline-block;
-  transition: all 0.3s;
-  position: relative;
-  overflow: hidden;
-  z-index: 1;
-}
-.btn__signup:after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: transparent;
-  z-index: -2;
-}
-.btn__signup:before {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 0%;
-  height: 100%;
-  background-color: #66BB6A;
-  transition: all 0.3s;
-  z-index: -1;
-}
-.btn__signup:hover {
-  color: #ffffff;
-}
-.btn__signup:hover:before {
-  width: 100%;
-}
-
-
-.btn__hero {
+  
+.btn__farm--invest {
   border: 1px solid #66BB6A;
   color: #ffffff;
-  font-size: 1.8rem;
+  display: inline-block;
+  min-width: 25rem;
+  margin-top: 4rem;
   -webkit-box-shadow: 1px 10px 30px -10px #66bb6a;
   -moz-box-shadow: 1px 10px 30px -10px #66bb6a;
   box-shadow: 1px 10px 30px -10px #66bb6a;
@@ -121,12 +67,12 @@ section {
   https://codepen.io/alticreation/pen/zBZwOP
   */
   display: inline-block;
-  transition: all 0.3s;
+  transition: all 0.5s;
   position: relative;
   overflow: hidden;
   z-index: 1;
 }
-.btn__hero:after {
+.btn__farm--invest:after {
   content: "";
   position: absolute;
   bottom: 0;
@@ -136,7 +82,7 @@ section {
   background-color: #66BB6A;
   z-index: -2;
 }
-.btn__hero:before {
+.btn__farm--invest:before {
   content: "";
   position: absolute;
   bottom: 0;
@@ -144,138 +90,14 @@ section {
   width: 0%;
   height: 100%;
   background-color: #ffffff;
-  transition: all 0.3s;
+  transition: all 0.5s;
   z-index: -1;
 }
-.btn__hero:hover {
+.btn__farm--invest:hover {
   color: #66BB6A;
 }
-.btn__hero:hover:before {
+.btn__farm--invest:hover:before {
   width: 100%;
-}
-
-.hero__img {
-  position: absolute;
-  top: 0;
-  right: 0;
-  z-index: -1;
-}
-.hero__img img {
-  max-height: 100vh;
-  width: initial;
-}
-
-/* Hero */
-.sect {
-  margin:2rem 0;
-}
-
-
-/*End Hero */
-/*Opportunities*/
-.opportunities {
-  position: relative;
-}
-
-.opportunities__img {
-  position: absolute;
-  left: -1.6rem;
-  top: -16rem;
-  z-index: -1;
-}
-.opportunities__img img {
-  max-height: 55rem;
-  max-width: 16rem;
-}
-
-.opportunities__content {
-  margin: auto;
-  display: flex;
-  flex-direction: column;
-  padding-bottom: 5rem;
-  border-bottom: 2px solid #f7f7f7;
-  margin-bottom: 4rem;
-}
-
-.opportunities__head {
-  text-align: center;
-  max-width: 70rem;
-  margin: 0 auto 10rem;
-}
-
-.opportunities__title {
-  font-size: 3.6rem;
-  color: #000000;
-}
-
-.opportunities__description {
-  margin-top: 2.5rem;
-  font-size: 1.8rem;
-  font-weight: 400;
-  color: #263238;
-}
-
-.opportunities__body {
-  display: flex;
-  flex-wrap: wrap;
-  grid-gap: 2.5rem;
-  align-self: baseline;
-}
-
-.opportunity {
-  width: 30%;
-  background-color: #ffffff;
-  border-radius: 0.5rem;
-  filter: drop-shadow(0 0 0.75rem rgba(27, 31, 35, 0.15));
-  padding: 5rem 2.5rem 2.5rem;
-  transition: all 0.3s ease-out;
-}
-.opportunity.active {
-  background-color: #66BB6A;
-}
-.opportunity.active .opportunity__title,
-.opportunity.active .opportunity__description {
-  color: #ffffff;
-}
-.opportunity:hover {
-  transform: translateY(-2rem);
-}
-
-.opportunity__icon {
-  max-height: 5.6rem;
-  width: initial;
-}
-
-.opportunity__title {
-  font-size: 1.8rem;
-  color: #263238;
-  margin: 2.5rem 0;
-}
-
-.opportunity__description {
-  font-size: 1.6rem;
-  font-weight: 400;
-  color: #263238;
-}
-
-/*End Opportunities*/
-/* Invest*/
-.invest {
-  margin: auto;
-}
-
-.invest__head {
-  max-width: 70rem;
-}
-
-.invest__title {
-  font-size: 3.6rem;
-}
-
-.invest__description {
-  margin-top: 1.5rem;
-  color: #324148;
-  font-size: 1.8rem;
 }
 
 .invest__body {
@@ -317,51 +139,6 @@ section {
   max-width: 30rem;
 }
 
-.btn__invest {
-  color: #66BB6A;
-  display: inline-block;
-  width: 20rem;
-  text-align: center;
-  -webkit-box-shadow: 1px 10px 30px -10px #66bb6a;
-  -moz-box-shadow: 1px 10px 30px -10px #66bb6a;
-  box-shadow: 1px 10px 30px -10px #66bb6a;
-  /*
-  Button hover effect resource
-  https://codepen.io/alticreation/pen/zBZwOP
-  */
-  display: inline-block;
-  transition: all 0.3s;
-  position: relative;
-  overflow: hidden;
-  z-index: 1;
-}
-.btn__invest:after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #ffffff;
-  z-index: -2;
-}
-.btn__invest:before {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 0%;
-  height: 100%;
-  background-color: #66BB6A;
-  transition: all 0.3s;
-  z-index: -1;
-}
-.btn__invest:hover {
-  color: #ffffff;
-}
-.btn__invest:hover:before {
-  width: 100%;
-}
 
 /*End Invest*/
 /*End How Is Works*/
@@ -666,263 +443,7 @@ section {
   width: 100%;
 }
 
-/*End Farm Invest*/
-/*Footer*/
-.footer {
-  position: relative;
-}
 
-.footer__body {
-  margin: auto;
-  display: flex;
-  flex-wrap: wrap;
-  grid-gap: 2.5rem;
-  align-items: baseline;
-  padding-bottom: 5rem;
-  border-bottom: 2px solid #f7f7f7;
-}
-
-.footer__nav {
-  display: flex;
-  flex-wrap: wrap;
-  flex: 9 2 auto;
-  grid-row-gap: 2.5rem;
-}
-
-.footer_nav__menu {
-  flex-basis: 33%;
-}
-
-.footer_nav__item {
-  padding: 1rem 2.5rem;
-}
-
-.footer_nav__menu__title {
-  font-size: 1.6rem;
-  text-transform: uppercase;
-}
-
-.footer_nav__link {
-  font-size: 1.6rem;
-  color: #607D8B;
-  transition: 0.2s all;
-}
-.footer_nav__link:hover {
-  color: #66BB6A;
-}
-
-.footer__contact {
-  flex: 1 0 28rem;
-  background-color: #66BB6A;
-  padding: 5rem 5rem 10rem;
-  color: #ffffff;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-}
-.footer__contact > * {
-  max-width: 16rem;
-}
-
-.footer__contact__title {
-  margin-bottom: 1.5rem;
-}
-
-.email {
-  color: #ffffff;
-}
-
-.btn__signin {
-  margin-top: 1.5rem;
-  border: 1px solid #ffffff;
-  color: #66BB6A;
-  /*
-  Button hover effect resource
-  https://codepen.io/alticreation/pen/zBZwOP
-  */
-  display: inline-block;
-  transition: all 0.3s;
-  position: relative;
-  overflow: hidden;
-  z-index: 1;
-}
-.btn__signin:after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #ffffff;
-  z-index: -2;
-}
-.btn__signin:before {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 0%;
-  height: 100%;
-  background-color: #66BB6A;
-  transition: all 0.3s;
-  z-index: -1;
-}
-.btn__signin:hover {
-  color: #ffffff;
-}
-.btn__signin:hover:before {
-  width: 100%;
-}
-
-.footer__bottom{
-  background-color: var(--mainColor-green);
-}
-
-.footer__bottom__content {
-  margin-top: 5rem;
-  display: flex;
-  align-items: baseline;
-  justify-content: space-between;
-  margin: 5rem auto 0;
-  padding-bottom: 10rem;
-}
-
-.footer_copyright {
-  color: var(--mainColor-white);
-  font-size: 1.4rem;
-  text-align: center;
-}
-
-.footer_img {
-  position: absolute;
-  bottom: 0;
-  right: -1.5rem;
-  max-width: 50rem;
-}
-
-/*End Footer*/
-@media screen and (max-width: 950px) {
-  /*Header */
-  .hamburger-menu-wrap,
-.nav-close-icon {
-    display: block;
-  }
-
-  .header__nav__content {
-    flex: initial;
-    align-items: initial;
-    position: fixed;
-    top: 0;
-    right: 0;
-    width: 30rem;
-    height: 100vh;
-    background-color: #66BB6A;
-    z-index: 2;
-    flex-direction: column;
-    transform: translateX(40rem);
-    transition: transform 0.3s ease-in-out;
-    grid-gap: 2.5rem;
-  }
-
-  .header__menu {
-    flex-direction: column;
-    flex: initial;
-    align-items: center;
-  }
-
-  .menu__link {
-    color: #ffffff;
-  }
-  .menu__link:hover, .menu__link.active {
-    color: #ffffff;
-  }
-
-  .header__signup {
-    flex: initial;
-    justify-content: center;
-  }
-
-  /*End Header */
-  /*Hero */
-  .hero__content {
-    justify-content: center;
-    text-align: center;
-  }
-
-  .hero__img {
-    display: none;
-  }
-
-  /*End Hero */
-  /*Testimonials*/
-  .testimonial {
-    width: 50%;
-  }
-
-  /*End Testimonials*/
-}
-@media screen and (max-width: 768px) {
-  /* Opportunities*/
-  .opportunity {
-    width: 100%;
-  }
-
-  /*End Opportunities*/
-  /*How Is Works*/
-  .form_progressbar {
-    grid-column-gap: 7rem;
-    justify-content: center;
-  }
-
-  .progressbar__step {
-    width: 4.8rem;
-    height: 4.8rem;
-  }
-  .progressbar__step:not(:first-child)::before, .progressbar__step:not(:first-child)::after {
-    width: 7rem;
-  }
-
-  .works__step__content {
-    flex-direction: column;
-  }
-
-  .works__step_title {
-    font-size: 2rem;
-    text-align: center;
-  }
-
-  /*End How Is Works*/
-  /*Testimonials*/
-  .testimonials__body::before, .testimonials__body::after {
-    background-color: transparent;
-  }
-
-  .testimonials__list {
-    padding-left: 1.5rem;
-  }
-
-  .testimonial {
-    width: calc(100% - 3rem);
-    word-wrap: break-word;
-  }
-  .testimonial:hover {
-    transform: initial;
-  }
-
-  /*End Testimonials*/
-  /*Footer*/
-  .footer_nav__menu {
-    text-align: center;
-  }
-
-  .footer__bottom__content {
-    flex-direction: column;
-    grid-row-gap: 4.5rem;
-    align-items: center;
-  }
-
-  /*end Footer*/
-}
 @media screen and (max-width: 500px) {
   /*Global*/
 .opportunities__title,
@@ -938,91 +459,17 @@ section {
     font-size: 1.6rem;
   }
 
-  /*End Global*/
-  /*Hero*/
-  .hero__title {
-    font-size: 3.2rem;
-  }
-
-  /*End Hero*/
-  /*Opportunities*/
-  .opportunities__img {
-    top: -8rem;
-  }
-  .opportunities__img img {
-    max-height: 40rem;
-    max-width: 10rem;
-  }
-
-  .opportunity__icon {
-    width: inherit;
-  }
 
   /*End Opportunities*/
   /*Invest Section*/
   .invest__body {
     grid-template-columns: repeat(auto-fill, minmax(32rem, 1fr));
   }
-
-  .invest__item__title {
-    font-size: 2.4rem;
-  }
-
-  /*End Invest Section*/
-  /*How Is Works*/
-  .form_progressbar {
-    grid-column-gap: 4rem;
-    justify-content: center;
-  }
-
-  .progressbar__step {
-    width: 4.8rem;
-    height: 4.8rem;
-  }
-  .progressbar__step:not(:first-child)::before, .progressbar__step:not(:first-child)::after {
-    width: 4rem;
-  }
-
-  .works__step_title {
-    font-size: 1.8rem;
-  }
-
-  /*End How Is Works*/
-  /*Testimonials*/
-  .testimonials {
-    margin-top: 10rem;
-  }
-
-  /*End Testimonials*/
-  /*Footer*/
-  .footer_nav__menu {
-    text-align: left;
-  }
-
-  .footer__contact {
-    width: 100%;
-  }
-
-  /*End Footer*/
 }
 @media screen and (max-width: 360px) {
   /*Invest Section*/
   .invest__body {
     grid-template-columns: repeat(auto-fill, minmax(30rem, 1fr));
-  }
-
-  /*End Invest Section*/
-  /*How Is Works*/
-  .progressbar__step {
-    width: 4rem;
-    height: 4rem;
-  }
-
-  /*End How Is Works*/
-  /*Testimonials */
-  .testimonial__profile {
-    flex-direction: column;
-    text-align: center;
   }
 
   /*End Testimonials*/
