--- a/src/style/contactus/contact.css
+++ b/src/style/contactus/contact.css
@@ -1,49 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&family=Noto+Sans:wght@100;200;300;400;500;600;700;800&display=swap');
-*,
-*:before,
-*:after {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-:root{
-    --mainColor-white: #FEFCFC;
-    --mainColor-blue: #162F3A;
-    --subColor-blue: #2D5363;
-    --subColor-lightBlue: #9BC9DD;
-    --mainColor-green: #64C676;
-  }
-
-html {
-  font-size: 10px;
-}
-
-body {
-    font-family: 'Noto Sans TC', sans-serif;
-    font-size: 1.6rem;
-    color: var(--mainColor-blue);
-    background-color: var(--mainColor-white);
-  }
-  
-
-img {
-  width: 100%;
-  max-width: 100%;
-}
-
-ul {
-  list-style-type: none;
-}
-
-a {
-  text-decoration: none;
-  color: inherit;
-}
-
-h1 {
-  line-height: 8rem;
-}
 
 input, textarea {
   font-size: 1.8rem;
@@ -72,10 +27,12 @@ section {
   padding: 5rem 0;
 }
 
-.btn {
+.form-btn {
     border-radius: 0.5rem;
     padding: 1.2rem;
     cursor: pointer;
+    margin: 0 auto;
+
   }
   
   
@@ -148,14 +105,6 @@ section {
   font-weight: 400;
 }
 
-.bg-white {
-  background-color: #ffffff;
-}
-
-.pt-15 {
-  padding-top: 15rem;
-}
-
 /*End Footer*/
 /*END HOME PAGE*/
 /*Contact Page*/
@@ -214,66 +163,14 @@ section {
 }
 
 
-.copy {
-    display: block;
-    max-width: 500px;
-    margin-right: auto;
-    margin-bottom: 1.5rem;
-    margin-left: auto;
-    padding-right: 1.5rem;
-    padding-left: 1.5rem;
-    font-family: 'Noto Sans TC', sans-serif;
-    font-size: 2rem;
-    font-weight: 600;
-    color: lightgray;
-    line-height: 1.8em;
-    text-align: center;
-  }
-  
-  .copy-white {
-    color: gray;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
-  
-  .content-small{
-    margin-bottom: 1.5rem;
-    font-size: 1.5rem;
-    line-height: 1.2em;
-    font-family: 'Noto Sans TC', sans-serif;
-    color: var(--mainColor-blue);
-    text-transform: uppercase;
-    letter-spacing: 0.5em;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
-  
-  .head-small {
-    margin-bottom: 1.5rem;
-    font-size: 3rem;
-    line-height: 1.2em;
-    font-weight: 600;
-    font-family: 'Noto Sans TC', sans-serif;
-    color: var(--mainColor-blue);
-    text-transform: uppercase;
-    letter-spacing: 0.5em;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
-  
-  .head-centered {
-    text-align: center;
-  }
-
   .opportunities__head {
     text-align: center;
     max-width: 70rem;
-    margin: 10rem auto;
+    margin: auto;
   }
   
   .opportunities__title {
     font-size: 3.6rem;
-    color: #000000;
   }
   
   .opportunities__description {
