--- a/src/pages/News/style.css
+++ b/src/pages/News/style.css
@@ -88,7 +88,7 @@ h1{
 }
 
 
-.btn {
+.form-btn {
     border-radius: 0.5rem;
     padding: 1.2rem;
     cursor: pointer;
@@ -96,27 +96,12 @@ h1{
     border-radius: 20px;
     color: #999;
   }
-  
-  
-.btn__farm--invest {
-    border: 1px solid #66BB6A;
+
+  .form-btn .sendmessage{
     color: #ffffff;
-    display: inline-block;
-    min-width: 25rem;
-    margin-top: 4rem;
-    -webkit-box-shadow: 1px 10px 30px -10px #66bb6a;
-    -moz-box-shadow: 1px 10px 30px -10px #66bb6a;
-    box-shadow: 1px 10px 30px -10px #66bb6a;
-    /*
-    Button hover effect resource
-    https://codepen.io/alticreation/pen/zBZwOP
-    */
-    display: inline-block;
-    transition: all 0.5s;
-    position: relative;
-    overflow: hidden;
-    z-index: 1;
+    font-weight: 500;
   }
+
   .btn__farm--invest:after {
     content: "";
     position: absolute;
@@ -138,9 +123,10 @@ h1{
     transition: all 0.5s;
     z-index: -1;
   }
-  .btn__farm--invest:hover {
+.sendmessage a:hover {
     color: #66BB6A;
   }
-  .btn__farm--invest:hover:before {
-    width: 100%;
+  .form-group .form-btn {
+    color: #fff;
+    text-align: center;
   }
