--- a/src/style/all.scss
+++ b/src/style/all.scss
@@ -6,6 +6,7 @@
 @import "../style/component/layout.css";
 @import "../style/evnIntro/evnIntro.css";
 @import "../style/shop/shop.css";
+@import "../style/shopdetail/shopdetail.css";
 @import "../style/home/home.css";
 
  
