--- a/src/component/aboutme-components/openning/openning.css
+++ b/src/component/aboutme-components/openning/openning.css
@@ -65,9 +65,9 @@ body, html {
     right: 0;
     background-color: #fff;
     border: none;
-    border-bottom: 1px dotted grey;
+    border-bottom: 1px dotted #64C676;
     padding: 0;
     margin: 0 auto 2%;
     cursor: pointer;
-    color: grey;
+    color: #64C676;
   }
