mu更新 RWD調整 文案寫入 有的沒的

--- a/src/style/common/_mixins.sass
+++ b/src/style/common/_mixins.sass
@@ -13,17 +13,17 @@
 
 //標題樣式
 @mixin subTitle($color:$subColor-lightBlue)
-    font-size: 35px
+    font-size: 26px //35px
     font-family: 'Noto Sans', sans-serif
     font-weight: 700
-    line-height: 54px
+    // line-height: 54px
     color: $color
 
 @mixin mainTitle($color:$mainColor-green)
-    font-size: 62px
+    font-size: 50px //62px
     font-family: 'Noto Sans TC', sans-serif
     font-weight: 700
-    line-height: 101px
+    // line-height: 101px
     color: $color
 
 //按鈕模組
