mu 全網改Link / 改為真資料 /忘了雜七雜八一堆更新

--- a/src/style/component/layout.sass
+++ b/src/style/component/layout.sass
@@ -410,7 +410,8 @@ footer
             width: 100%
             padding: 0 15px
             transition: 0.3s
-
+            &:visited
+                color: $mainColor-white
             &:hover
                 // background-color: #ffffff59
                 background-color: #31362f2b
