--- a/src/style/all.scss
+++ b/src/style/all.scss
@@ -8,6 +8,10 @@
 @import "../style/shop/shop.css";
 @import "../style/shopdetail/shopdetail.css";
 @import "../style/home/home.css";
+@import "../style/cart/cart.css";
+@import "../style/cart/pay.css";
+
+
 
  
 
