--- a/src/style/shop/shop.css
+++ b/src/style/shop/shop.css
@@ -1,5 +1,5 @@
 #shop-hero {
-    background-image: url("./b1.png");
+    background-image: url("../shop/b1.png");
     height: 40vh;
     /* width: 100%; */
     background-size: cover;
