--- a/src/style/shopdetail/shopdetail.css
+++ b/src/style/shopdetail/shopdetail.css
@@ -64,6 +64,8 @@ body {
 .small-img-group {
     display: flex;
     justify-content: space-between;
+    padding-top: 5%;
+    
 }
 
 .small-img-col {
