無冠哲希望安好

--- a/src/style/member/goSignUpCss.css
+++ b/src/style/member/goSignUpCss.css
@@ -61,3 +61,7 @@
 #EdisonGoSignUpContainer a{
   color:var(--subColor-blue)
 }
+#EdisonGoSignUpContainer span{
+  color: rgb(191, 36, 36);
+  font-size: var(--fontSize-SMALL);
+}
