--- a/src/component/psychologicalTest/psychologicalTest.css
+++ b/src/component/psychologicalTest/psychologicalTest.css
@@ -141,7 +141,8 @@
 
 
 .testAnswerRowSave {
-  padding: 50px 25px 50px 25px;
+  padding: 50px 25px;
+  margin: 25px 5px;
 
 }
 
@@ -151,8 +152,8 @@
   font-weight: bold;
   text-align: center;
   font-size: 28px;
-
 }
+
 
 #shareImage {
   border: 3px solid black;
