--- a/src/style/member/goLogInCss.css
+++ b/src/style/member/goLogInCss.css
@@ -36,10 +36,16 @@
 }
 #EdisonGoLogInContainer input{
     font-size: 16px;
+    
   
 }
 
-
+#EdisonGoLogInContainer input[type=text]{
+    font-size: 16px;
+    width: 100%;
+    
+  
+}
 #EdisonGoLogInContainer #GoLogInSubmitBTN{
     background-color: var(--mainColor-seBlue);
     color: rgb(255, 255, 255);
