--- a/src/component/articleComponents/Home/RoutePage/style.css
+++ b/src/component/articleComponents/Home/RoutePage/style.css
@@ -86,6 +86,7 @@ body {
   margin: 0 3rem;
   padding: 0.5rem;
   border: 1px solid var(--mainColor-green);
+  white-space:nowrap;
 }
 
 .active-tab {
@@ -101,6 +102,19 @@ body {
   box-shadow: 1px 10px 30px -8px #66bb6a;
 }
 
-.routerpage{
-  margin-bottom: 5rem;
+ul.d-flex.routerpage{
+  margin: auto ;
+  margin-bottom: 3rem;
+  padding: 0;
+}
+
+@media screen and (max-width: 500px) {
+  .flex-fill{
+    width:100%;
+    font-weight: 600;
+    font-size: 2rem;
+    margin: 0 2rem;
+    padding: 1rem;
+    white-space:nowrap;
+  }
 }
