--- a/src/style/component/layout.sass
+++ b/src/style/component/layout.sass
@@ -410,6 +410,8 @@ footer
             width: 100%
             padding: 0 15px
             transition: 0.3s
+            &:link
+                color: $mainColor-white
             &:visited
                 color: $mainColor-white
             &:hover
