--- a/src/style/member/voteData.css
+++ b/src/style/member/voteData.css
@@ -1,13 +1,13 @@
 .voteData {
     /* border: 3px solid black; */
-    margin: 50px;
     font-size: 16px;
-    padding-top: 50px;
     /* background-color: #64C676; */
     border-radius: 15px;
-    width: 100%;
+    width: 80%;
 }
-
+.EtopicDiv{
+    margin-bottom: 50px;
+}
 .voteDataTopic {
     margin-top: 25px;
     margin-right: 15px;
