--- a/src/style/member/voteAnswer.css
+++ b/src/style/member/voteAnswer.css
@@ -7,7 +7,7 @@
     width: 80%;
     margin-left: 10%;
     height: 450px;
-    background-color: var(--mainColor-gray);
+    background-color: var(--mainColor-green);
     border-radius: 10px;
     box-shadow: 0 0 20px 5px rgba(35, 30, 128, 0.05);
 }
@@ -18,7 +18,7 @@
     border-bottom: 1px solid #d5e3ea;
     font-weight: bold;
     font-family: 'Noto Sans TC', sans-serif;
-    background-color: var(--mainColor-gray);
+    background-color: var(--mainColor-green);
 }
 
 #votePoll #answers {
@@ -52,7 +52,7 @@
 
 #answerBackColor {
     width: 100%;
-    background-color: var(--mainColor-gray);
+    background-color: var(--mainColor-green);
     color: black;
     min-width: 35px;
     overflow: visible;
@@ -65,8 +65,7 @@
     background-color: rgb(161, 195, 223);
     border-radius: 4px;
     transition: 0.4s linear;
-    transition-property: width, background-color;
-
+    /* transition-property: width, */
 }
 
 @keyframes progressAnimation {
